Bugfix. All letters of a type will now turn visible

--- a/game.css
+++ b/game.css
@@ -1,4 +1,4 @@
-.letter {
+.letterContainer {
     position: relative;
     padding: 4px 8px;
     font-size: 16px;
@@ -8,7 +8,7 @@
     opacity: 0;
 }
 
-#nameSection .letter::after {
+#nameSection .letterContainer::after {
     background: black;
     position: absolute;
     content: '';
